--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -52,20 +52,13 @@
           <%= f.label :prefecture_code, class: "control-label" %>
           <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name %>
         </div>
-        
-        <div class="field">
-          <%= f.label :introduction, autofocus: true, class: "control-label" %>
-          <%= f.text_area :introduction, autocomplete: "off", class: "form-control", :rows=>"20" %>
-        </div>
-        
     </div>
   </div>
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
         <div class="actions">
-          <%= f.submit "Save changes", class: "btn btn-lg btn-primary" %>
+          <%= f.submit "Save changes", class: "btn btn-lg btn-primary button_colored" %>
         </div>
-        
         <br />
     </div>
   </div>
