--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -52,19 +52,13 @@
           <%= f.file_field :avatar %>
           <%= f.hidden_field :avatar_cache %>
         </div>
-        
-        <div class="field">
-          <%= f.label :introduction, class: "control-label" %>
-          <%= f.text_area :introduction, autocomplete: "off", class: "form-control", :rows=>"20" %>
-        </div>
-        
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-3 col-md-offset-3">
         <div class="actions">
-          <%= f.submit "Create my account", class: "btn btn-lg btn-primary" %>
+          <%= f.submit "Create my account", class: "btn btn-lg btn-primary button_colored" %>
         </div>
     </div>
   </div>
