--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <% flash.each do |key, value| %>
-        <div class="alert <%= bootstrap_class_for(key) %>"><%= value %></div>
+        <div class="alert <%= bootstrap_class_for(key) %>"><%= registrations_erros_normalization(value) %></div>
       <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
